<resources>
    <string name="app_name">Open311</string>
    <string name="Import">Import</string>
    <string name="Gallery">Gallery</string>
    <string name="Slideshow">Slideshow</string>
    <string name="Tools">Tools</string>
    <string name="Communicate">Communicate</string>
    <string name="Share">Share</string>
    <string name="Send">Send</string>
    <string name="ApplicationEmail">Contact the authorities</string>
    <string name="ApplicationIcon">Application Icon</string>
    <string name="setting_general">Settings</string>
    <string name="setting_user">User</string>
    <string name="setting_cloud">Servers</string>
    <string name="list_latest_messages">Recent reports</string>
    <string name="list_user_messages">My reports</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reports_recent">Recent Reports</string>
    <string name="menu_report">Report</string>
    <string name="menu_archive">My Reports</string>
    <string name="menu_about">About</string>
    <string name="tab_personal_info">Personal Info</string>
    <string name="tab_servers">Servers</string>
    <string name="button_add_server">Add Server</string>
    <string name="button_accept_error">Dismiss</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="jurisdiction_id">Jurisdiction ID</string>
    <string name="api_key">Api Key</string>
    <string name="format">Format</string>
    <string name="supports_media">Supports Media</string>
    <string name="dialog_loading_services">Loading service information</string>
    <string name="dialog_posting_service">Posting service request</string>
    <string name="choose_media_source">Select Image Source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="report_hint_service">Select a service</string>
    <string name="report_hint_photo">Add photo</string>
    <string name="report_hint_location">Select a location</string>
    <string name="report_hint_description">Enter a description</string>
    <string name="report_service">Service</string>
    <string name="report_status">Status</string>
    <string name="report_attributes">Attributes</string>
    <string name="report_description">Description of problem</string>
    <string name="report_date">Reported Date</string>
    <string name="report_photo">Photo</string>
    <string name="report_location">Location</string>
    <string name="report_address">Enter an address</string>
    <string name="report_visibility">Share report with public</string>
    <string name="report_required_field">Required field</string>
    <string name="report_loading">Loading</string>
    <string name="report_dialog_title">Service Request</string>
    <string name="report_dialog_message">Wait while sending</string>
    <string name="report_success_message">Your report has been sent</string>
    <string name="report_failure_message">Unsuccessful, please try again later</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="pending">Pending</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">OK</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="radio_button_normal">Standard</string>
    <string name="radio_button_hybrid">Hybrid</string>
    <string name="radio_button_satellite">Satellite</string>
    <string name="failure_loading_services">Failed to load service information</string>
    <string name="failure_posting_service">Posting report failed</string>
    <string name="error_403">This app does not have permission</string>
    <string name="invalid_name">Name is invalid</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_phone">Phone number is invalid</string>
    <string name="settings_saved">Settings saved</string>
    <string name="error_occurred">An error occurred</string>
    <string name="status_open">open</string>
    <string name="status_closed">closed</string>
    <string name="status_unknown">unknown</string>
    <string name="add_to_report">Add information</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="request_image">Image</string>
    <string name="request_ago_icon">Last updated</string>
    <string name="notImplemented">Not yet implemented</string>
    <string name="serviceListUnavailable">Services can not be fetched. Try again later.</string>
    <string name="storageNotWritable">External storage is not writable</string>
    <string name="policy_privacy_title">Privacy</string>
    <string name="policy_faq_title">Questions</string>
    <string name="policy_privacy_text">
        We are aware of your trust in us. That is why we take it as our primary responsibility to protect your privacy.
        We will however collect information. We will explain why and what.\n\n

        Our privacy policy applies to the application and the services. By using our application, you accept our privacy policy.\n\n

        We respect the privacy of all users and make sure that personal information is used confidential.</string>
    <string name="policy_faq_text">We will monitor constantly if we comply to our privacy policy. For questions regarding privacy, please contact us.</string>
    <string name="policy_intro_text">
        Communicate Service Requests with your Government\n\n
        Your previous request will be shown here after you have created your first request
    </string>
    <string name="updated">Updated</string>
    <string name="map">Select a location</string>
    <string name="map_hint_gps">Acquire GPS position</string>
    <string name="contactingServer">Connecting to</string>
    <string name="connectionEstablished">Connection established</string>
    <string name="servicesDownloaded">services downloaded</string>
    <string name="report_upload_started">Upload started</string>
    <string name="report_upload_title">Upload</string>
    <string name="report_upload_progress">Uploaded %1$d/%2$d.</string>
    <string name="no_anonymous">No, post anonymous</string>
    <string name="post_anonymous">Anonymous</string>
    <string name="post_anonymous_description">You haven\'t set any contact details. This means that responsible party will not be able to contact you. Do you want to add contact details now?</string>
    <string name="street">Street</string>
    <string name="house_number">Housenumber</string>
    <string name="edit_address">Address</string>
    <string name="report_hint_sound">Add sound</string>
    <string name="recorder">Microphone</string>
    <string name="choose_audio_source">Select Audio Source</string>
    <string name="record_start">Start Recording</string>
    <string name="record_stop">Stop Recording</string>
    <string name="stop_dialog">Stop</string>
    <string name="pg_upload_audio_title">Upload (%1$d/%2$d)</string>
    <string name="pg_upload_audio_message">Uploading Audio</string>
    <string name="pg_upload_image_title">Upload (%1$d/%2$d)</string>
    <string name="pg_upload_image_message">Uploading Image</string>
    <string name="no_servicecode">service</string>
    <string name="no_coordinates">location</string>
    <string name="no_description">description</string>
    <string name="missing_fields">Please complete all required fields.</string>
    <string name="no_reports_title">No reports</string>
    <string name="no_reports_text">You have not sent any reports yet. When you create your first report, this page will hold an overview of all your reports.</string>
    <string name="policy_intro_title">Information</string>
    <string name="record_in_progress">Recording in progress</string>
    <string name="record_ready">Recording finished</string>
    <string name="title">Title</string>
    <string name="id">Id</string>
    <string name="citiesListUnavailable">Settings not available, missing Cities list.</string>
    <string name="report_hint_cities">Select your city</string>
    <string name="setting_map">Map</string>
    <string name="launcher_icon">launcher_icon</string>
    <string name="welcome_message">Welcome to the open311 app!</string>
    <string name="welcome_intro">Welcome Intro</string>
    <string name="welcome_submit">Welcome submit</string>
</resources>
