<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PolicyFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/AppTheme.PolicyTitle"
                android:text="@string/policy_intro_title" />

            <TextView
                style="@style/AppTheme.PolicyText"
                android:text="@string/policy_intro_text" />

            <TextView
                style="@style/AppTheme.PolicyTitle"
                android:text="@string/policy_privacy_title" />

            <TextView
                style="@style/AppTheme.PolicyText"
                android:text="@string/policy_privacy_text" />

            <TextView
                style="@style/AppTheme.PolicyTitle"
                android:text="@string/policy_faq_title" />

            <TextView
                style="@style/AppTheme.PolicyText"
                android:text="@string/policy_faq_text" />
            <TextView
                style="@style/AppTheme.PolicyText"
                />
        </LinearLayout>

    </ScrollView>

</FrameLayout>
