<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    tools:context=".fragments.ReportFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/report_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <!-- Button for selecting Service -->
            <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/serviceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:longClickable="true"
                android:minHeight="72dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/serviceView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/report_hint_description"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_domain"
                    android:tint="@color/iconColorMutedDark" />

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/service_text_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:id="@+id/service_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_hint_service" />
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#000" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/report_description_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:ems="5"
                    android:gravity="top"
                    android:hint="@string/report_hint_description"
                    android:inputType="textMultiLine|textCapSentences"
                    android:minHeight="200dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/report_attributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Attributes will be dynamically added -->

            </android.support.v7.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#000" />

            <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/locationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:minHeight="72dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/locationView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/report_hint_location"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_place"
                    android:tint="@color/iconColorMutedDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_hint_location" />

                </LinearLayout>
            </android.support.v7.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#000" />

            <ViewSwitcher
                android:id="@+id/report_soundviewswitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:measureAllChildren="false">

                <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/soundButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:minHeight="72dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/soundView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/report_hint_sound"
                        android:scaleType="fitStart"
                        android:src="@drawable/ic_mic_black_24dp"
                        android:tint="@color/iconColorMutedDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp">

                        <TextView
                            android:id="@+id/sound_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/report_hint_sound" />

                    </LinearLayout>
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/soundLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:minHeight="72dp">

                    <ImageView
                        android:id="@+id/soundPlaceholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/report_hint_photo"
                        android:minHeight="72dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_image"
                        android:tint="@color/iconColorMutedDark" />
                </android.support.v7.widget.LinearLayoutCompat>
            </ViewSwitcher>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#000" />

            <ViewSwitcher
                android:id="@+id/report_photoviewswitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:measureAllChildren="false">

                <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/photoButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:minHeight="72dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/photoView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/report_hint_photo"
                        android:scaleType="fitStart"
                        android:src="@drawable/ic_image"
                        android:tint="@color/iconColorMutedDark" />

                    <android.support.v7.widget.LinearLayoutCompat
                        android:id="@+id/photo_text_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp">

                        <TextView
                            android:id="@+id/photo_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/report_hint_photo" />
                    </android.support.v7.widget.LinearLayoutCompat>
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/photoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:minHeight="72dp">

                    <ImageView
                        android:id="@+id/photoPlaceholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/report_hint_photo"
                        android:minHeight="72dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_image"
                        android:tint="@color/iconColorMutedDark" />
                </android.support.v7.widget.LinearLayoutCompat>
            </ViewSwitcher>
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/report_submit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_done"
        app:backgroundTint="@color/colorPrimary" />
</android.support.design.widget.CoordinatorLayout>